--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img alt = " sjlflkjs" src = "https://picsum.photos/id/123/200/300">
+	<img alt = " sjlflmjs" src = "https://picsum.photos/id/124/200/300">
+	<img alt = " sjlflmjs" src = "https://picsum.photos/id/125/200/300">
     <script type="text/javascript" src="./script.js">
 </script>
 
