--- a/main.html
+++ b/main.html
@@ -8,9 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<div>
 	<img alt = "1st image" src = "https://picsum.photos/id/123/200/300">
 	<img alt = "2nd image" src = "https://picsum.photos/id/124/200/300">
 	<img alt = "3rd image" src = "https://picsum.photos/id/125/200/300">
+		</div>
+	</nav>
     <script type="text/javascript" src="./script.js">
 </script>
 
