--- a/main.html
+++ b/main.html
@@ -9,12 +9,23 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<nav>
-		<div>
-	<img alt = "1st image" src = "https://picsum.photos/id/123/200/300">
-	<img alt = "2nd image" src = "https://picsum.photos/id/124/200/300">
-	<img alt = "3rd image" src = "https://picsum.photos/id/125/200/300">
-		</div>
+		<ul>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#about">About us</a></li>
+			<li><a href="#contamt">Contact us</a></li>
+		</ul>
 	</nav>
+
+	<h2>3 random audios</h2>
+	<img src="https://picsum.photos/id/123/200/300" alt="Image 1">
+	<h3>Image 1</h3>
+
+	<img src="https://picsum.photos/id/124/200/300" alt="Image 2">
+	<h3>Image 2</h3>
+
+	<img src="https://picsum.photos/id/125/200/300" alt="Image 3">
+	<h3>Image 3</h3>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
